--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
         <div class="social-links mt-3 text-center">
           <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a> -->
           <a href="https://www.facebook.com/profile.php?id=100008180529545" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="www.linkedin.com/in/venugopal-andalam" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <!-- <a href="https://www.hackerrank.com/venuandalam912?hr_r=1" class="hackerrank"><i class="bx bxl-hacker-rank"></i></a> -->
+          <a href="https://github.com/venu912" class="github"><i class="bx bxl-github"></i></a>
+          <a href="https://www.linkedin.com/in/venugopal-andalam/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
@@ -61,7 +61,7 @@
           <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-          <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
+          <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Project Portfolio</span></a></li>
           <!-- <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li> -->
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
@@ -275,7 +275,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Portfolio</h2>
+          <h2>Project Portfolio</h2>
           <h3 class="resume-title">Farmer's Connect Application</h3>
           <p>Farmers connect is cross platform mobile application built using react native as front end and firebase as back end. This project focuses on solving many farmer issues that they are facing in the current situations like knowing crop information, pesticides usage, fertilizers usage and etc.</p>
         </div>
