--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
                 <ul>
                   <li>Worked on video library using flexbox and integrated to leftpane</li>
                   <li>Worked on Home page regarding Kharif and Rabi</li>
-                  <li>Worked on images and content and redirecting to particular crop pages through modal in Kharif and Rabi</li>
+                  <li>Worked on images and content and navigating to particular crop pages through modal in Kharif and Rabi</li>
                 </ul>
                 <!-- <h5>2016 - 2020</h5>
                 <p><em>Gitam University, Visakhapatnam</em></p> -->
